[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/texturas/background.png" type="Texture" id=1]
[ext_resource path="res://Passaro/Jogador/Jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ambiente/Chao.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ambiente/SpawnCanos.tscn" type="PackedScene" id=4]
[ext_resource path="res://Informações/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://Background.gd" type="Script" id=6]
[ext_resource path="res://Informações/Menus.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/fundo.wav" type="AudioStream" id=8]
[ext_resource path="res://Informações/pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://Informações/Musica.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/texturas/background1.webp" type="Texture" id=11]
[ext_resource path="res://assets/texturas/background2.webp" type="Texture" id=12]
[ext_resource path="res://assets/texturas/background3.webp" type="Texture" id=13]

[node name="Background" type="Node2D"]
script = ExtResource( 6 )

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" parent="Hud" instance=ExtResource( 10 )]

[node name="MenuIniciar" parent="." instance=ExtResource( 7 )]

[node name="bg0" type="Sprite" parent="."]
scale = Vector2( 0.9375, 1.3418 )
texture = ExtResource( 1 )
centered = false

[node name="bg1" type="Sprite" parent="."]
visible = false
position = Vector2( 239.5, 426.5 )
scale = Vector2( 0.469727, 0.833008 )
texture = ExtResource( 11 )

[node name="bg2" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 427 )
scale = Vector2( 0.46875, 0.833984 )
texture = ExtResource( 12 )

[node name="bg3" type="Sprite" parent="."]
visible = false
position = Vector2( 240.5, 427.5 )
scale = Vector2( 0.469727, 0.834961 )
texture = ExtResource( 13 )

[node name="SpawnCanos" parent="." instance=ExtResource( 4 )]
position = Vector2( 650, 0 )

[node name="Chao" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 685 )

[node name="Jogador" parent="." instance=ExtResource( 2 )]
position = Vector2( 115, 427 )

[node name="MusicaFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0
autoplay = true

[node name="Pausado" parent="." instance=ExtResource( 9 )]

[connection signal="novo_jogo" from="MenuIniciar" to="." method="_on_MenuIniciar_novo_jogo"]
[connection signal="body_entered" from="Chao/AreaDano" to="." method="_on_AreaDano_body_entered"]
[connection signal="morto" from="Jogador" to="." method="_on_Jogador_morto"]

[editable path="Chao"]
